--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko-KR">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>리액트 펀더멘탈</title>
     <link rel="icon" href="assets/favicon.svg" />
     <link
@@ -15,7 +16,5 @@
     <noscript>이 앱을 사용하려면 자바스크립트 활성화가 필요합니다.</noscript>
 
     <div id="root"></div>
-
-    <button type="button" class="getOutReact__button">리액트 나가~</button>
   </body>
 </html>
