--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ko-KR">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>리액트 펀더멘탈</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.svg" />
     <link
       rel="stylesheet"
@@ -17,12 +17,24 @@
 
     <div id="root"></div>
 
-    <!-- web publisher html markup code -> react + jsx -->
-    <!-- <form> -->
-    <!-- <label for="searchKeyword" class="sr-only">검색</label> -->
-    <!-- self closing element -->
-    <!-- HTML -->
-    <!-- <input id="searchKeyword" type="search" placeholder="검색"> -->
-    <!-- </form> -->
+    <!-- HTML은 대소문자를 구분하지 않는다. -->
+    <!-- HTML에서 인라인 스타일은 CSS 선언을 문자 값으로 연이어 설정합니다. -->
+    <form
+      style="
+        margin-block: 8px;
+        border-radius: 4px;
+        padding: 16px;
+        background-color: #f0f6f8;
+      "
+    >
+      <label for="searchKeyword" class="sr-only">검색</label>
+      <input
+        style="padding: 4px 6px; color: #3d3b3f"
+        data-identity="searchKeyword"
+        type="search"
+        aria-label="키워드 검색"
+        placeholder="검색"
+      />
+    </form>
   </body>
 </html>
