--- a/index-html-vs-jsx.html
+++ b/index-html-vs-jsx.html
@@ -17,7 +17,24 @@
 
     <div id="root"></div>
 
-    <!-- HTML에 공백을 추가하려면 ? &nbsp; -->
-    <!-- <p>HTML에 공백을 추가 &nbsp;&nbsp;&nbsp;&nbsp;하려면?</p> -->
+    <!-- HTML은 대소문자를 구분하지 않는다. -->
+    <!-- HTML에서 인라인 스타일은 CSS 선언을 문자 값으로 연이어 설정합니다. -->
+    <form
+      style="
+        margin-block: 8px;
+        border-radius: 4px;
+        padding: 16px;
+        background-color: #f0f6f8;
+      "
+    >
+      <label for="searchKeyword" class="sr-only">검색</label>
+      <input
+        style="padding: 4px 6px; color: #3d3b3f"
+        data-identity="searchKeyword"
+        type="search"
+        aria-label="키워드 검색"
+        placeholder="검색"
+      />
+    </form>
   </body>
 </html>
