--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
       href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT/fonts/variable/woff2/SUIT-Variable.css"
     />
     <link rel="stylesheet" href="./src/styles/main.css" />
+    <!-- <script
+      type="module"
+      src="./src/lecture/19-reusable-component.jsx"
+    ></script> -->
     <script
       type="module"
-      src="./src/lecture/18-component-type-function.jsx"
+      src="./src/lecture/19-reusable-component.jsx"
     ></script>
   </head>
   <body>
