--- a/pages/web-component-slot.html
+++ b/pages/web-component-slot.html
@@ -15,6 +15,9 @@
   <body>
     <noscript>이 앱을 사용하려면 자바스크립트 활성화가 필요합니다.</noscript>
 
+    <!-- web component defined custom component -->
+
+    <!-- custom component -->
     <euid-stack>
       <span slot="headline">슬롯(Slot)</span>
       <span slot="description">슬롯! 나를 넣어줘</span>
