--- a/src/exercises/02-widget/index.html
+++ b/src/exercises/02-widget/index.html
@@ -22,11 +22,7 @@
   <body>
     <article class="widget widget__weather">
       <h2 class="sr-only">날씨</h2>
-      <img
-        src="/images/weather-partly-cloudy.svg"
-        alt="맑고 구름 조금"
-        title="맑고 구름 조금"
-      />
+      <img src="/images/weather-partly-cloudy.svg" />
       <div class="weather__info" role="group">
         <span class="weather__info--template">-0.9°</span>
         <span class="weather__info--description">어제보다 1.3° 낮아요</span>
