--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <title>리액트 펀더멘탈</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.svg" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT/fonts/variable/woff2/SUIT-Variable.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT/fonts/variable/woff2/SUIT-Variable.css"
+    />
     <link rel="stylesheet" href="./src/styles/main.css" />
     <script type="module" src="./src/main.jsx"></script>
   </head>
 
   <body>
-
     <nav class="exercises__navigation">
       <h2 class="sr-only">엑서사이즈</h2>
       <a href="/src/exercises/02-widget/">위젯(Widget)</a>
@@ -20,9 +22,9 @@
     </nav>
 
     <noscript>이 앱을 사용하려면 자바스크립트 활성화가 필요합니다.</noscript>
-    
+
     <div id="root"></div>
 
+    <!-- <p><abbr title="Customer Relationship Management">CRM</abbr> 알아 ?</p> -->
   </body>
-
 </html>
